<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.info.droidkaigiapplication.presentation.ActivityUtilKt"/>
        <variable
            name="dataBindingImpl"
            type="com.info.droidkaigiapplication.presentation.more.MoreFragmentDataBindingImpl" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/reference_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/reference"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/drokaigi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:text="@string/droidkaigi_conference"
            app:layout_constraintTop_toBottomOf="@id/reference_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/drokaigi_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="@{(view) -> dataBindingImpl.openBrowser(@string/reference_drokaigi_url)}"
            tools:text="@string/reference_drokaigi_url"
            app:underLineString="@{@string/reference_drokaigi_url}"
            app:layout_constraintTop_toBottomOf="@id/drokaigi_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <View
            android:id="@+id/reference_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/drokaigi_link"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/function_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/function"
            app:layout_constraintTop_toBottomOf="@id/reference_divider"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/function_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/more_function_first"
            app:layout_constraintTop_toBottomOf="@id/function_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/function_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/more_function_second"
            app:layout_constraintTop_toBottomOf="@id/function_first"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/function_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/more_function_third"
            app:layout_constraintTop_toBottomOf="@id/function_second"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/function_third"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/more_by_writer"
            android:textColor="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>